--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,9 @@
   white-space: nowrap;
 
 }
+
+.whiteShadow{
+  box-shadow: -9px 7px 30px -1px rgba(255,255,255,0.5);
+-webkit-box-shadow: -9px 7px 30px -1px rgba(255,255,255,0.5);
+-moz-box-shadow: -9px 7px 30px -1px rgba(255,255,255,0.5);
+}
